feat: add common scss style

--- a/services/frontend/src/shared/styles/global.scss
+++ b/services/frontend/src/shared/styles/global.scss
@@ -1,4 +1,6 @@
 @import 'pretendard/dist/web/variable/pretendardvariable-dynamic-subset.css';
 @import 'font';
 @import "color";
+@import 'function';
+@import "mixin";
 @import "reset";
