feat: add mobile font size on common scsss

--- a/services/frontend/src/shared/styles/font.scss
+++ b/services/frontend/src/shared/styles/font.scss
@@ -17,6 +17,8 @@ $font-family-kr:
 
 $font-size-pc: 16;
 $font-size-pc-px: ($font-size-pc) * 1px;
+$font-size-mo: 12;
+$font-size-mo-px: ($font-size-mo) * 1px;
 $font-size-base: 1rem;
 $font-weight-bold: 700;
 $font-weight-normal: 500;
