--- a/services/frontend/src/components/unit/layout/layout.module.scss
+++ b/services/frontend/src/components/unit/layout/layout.module.scss
@@ -1,6 +1,5 @@
 $breakpoint-mobile-max: 550px;
 $breakpoint-pc-min: 1000px;
-$breakpoint-pc-max: 1440px;
 
 @mixin mobile {
   @media (max-width: #{$breakpoint-mobile-max}) {
@@ -9,7 +8,7 @@ $breakpoint-pc-max: 1440px;
 }
 
 @mixin pc {
-  @media (min-width: #{$breakpoint-pc-min}) and (max-width: #{$breakpoint-pc-max}) {
+  @media (min-width: #{$breakpoint-pc-min}) {
     @content;
   }
 }
