chore: update scss of Image Uploader

--- a/services/frontend/src/components/cell/uploader/image.module.scss
+++ b/services/frontend/src/components/cell/uploader/image.module.scss
@@ -27,7 +27,13 @@
     gap: 5px;
   }
 
-  input[type="file"] {
+  input[type='file'] {
     display: none;
   }
+}
+
+.name {
+  border-bottom: 1px solid $gray_20;
+  padding-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
 }
