--- a/services/frontend/src/pages/admin/page.module.scss
+++ b/services/frontend/src/pages/admin/page.module.scss
@@ -1,6 +1,13 @@
 .container {
   @include flex(space-between, flex-start);
   gap: 2rem;
+
+  ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem 1rem;
+    padding-bottom: 2rem;
+  }
 }
 
 .left {
@@ -11,4 +18,23 @@
   flex: 1;
   @include flex(space-between, center, column);
   gap: 10px;
+}
+
+.create_product {
+  a {
+    width: 100%;
+    height: 100%;
+    @include flex(center, center, column);
+    border: 1px dotted  $gray_20;
+    border-radius: ptr(15);
+    gap: 0.65rem;
+  }
+
+  div {
+    width: 2rem;
+    height: 2rem;
+    background-color: $primary;
+    border-radius: 50%;
+    @include flex(center, center);
+  }
 }
