--- a/services/frontend/src/pages/@/cart/page.module.scss
+++ b/services/frontend/src/pages/@/cart/page.module.scss
@@ -3,12 +3,33 @@
   gap: 2rem;
 }
 
-.left {
-  width: 560px;
+.cart_list {
+  width: 650px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem 1rem;
+  margin-bottom: 2rem;
+  border-top: 1px solid $gray_20;
+  border-bottom: 1px solid $gray_20;
+  padding: 1rem 0;
 }
 
-.right {
+.cart_content {
   flex: 1;
-  @include flex(space-between, center, column);
-  gap: 10px;
+  @include flex(center, start, column);
+  border: 1px solid $gray_20;
+  padding: ptr(7.5);
+  border-radius: ptr(5);
+  gap: 0.5rem;
+
+  ul {
+    width: 100%;
+    @include flex(center, center, column);
+    gap: 0.5rem;
+  }
+
+  li {
+    width: 100%;
+    @include flex(space-between, center);
+  }
 }
