--- a/services/frontend/src/components/cell/card/card.module.scss
+++ b/services/frontend/src/components/cell/card/card.module.scss
@@ -11,6 +11,7 @@
 
 .cart_card_wrapper {
   width: 100%;
+  height: 100%;
   @include flex(space-between, center);
 }
 
@@ -24,9 +25,6 @@
   div {
     width: 100%;
     @include flex(end, center);
-  }
-  span {
-    cursor: pointer;
   }
 }
 
