--- a/services/frontend/src/components/organism/list/product.module.scss
+++ b/services/frontend/src/components/organism/list/product.module.scss
@@ -1,4 +1,5 @@
 .admin_product_list {
+  min-height: ptr(200);
   a {
     width: 100%;
     height: 100%;
@@ -15,4 +16,15 @@
     border-radius: 50%;
     @include flex(center, center);
   }
+}
+
+.cart_list {
+  width: 650px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem 1rem;
+  margin-bottom: 2rem;
+  border-top: 1px solid $gray_20;
+  border-bottom: 1px solid $gray_20;
+  padding: 1rem 0;
 }
