--- a/services/frontend/src/pages/@/cart/page.module.scss
+++ b/services/frontend/src/pages/@/cart/page.module.scss
@@ -3,17 +3,6 @@
   gap: 2rem;
 }
 
-.cart_list {
-  width: 650px;
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 2rem 1rem;
-  margin-bottom: 2rem;
-  border-top: 1px solid $gray_20;
-  border-bottom: 1px solid $gray_20;
-  padding: 1rem 0;
-}
-
 .cart_content {
   flex: 1;
   @include flex(center, start, column);
@@ -32,4 +21,25 @@
     width: 100%;
     @include flex(space-between, center);
   }
+}
+
+.cart_item_quantity_update_form {
+  width: 500px;
+  @include flex(center, start, column);
+  gap: 1rem;
+}
+
+.cart_item_quantity_update_form_card {
+  width: 50%;
+}
+
+.cart_item_quantity_update_form_detail {
+  width: 100%;
+  @include flex(space-between, center);
+}
+
+.cart_item_quantity_update_form_buttons {
+  width: 100%;
+  @include flex(center, center);
+  gap: 0.5rem;
 }
