--- a/services/frontend/src/pages/products/page.module.scss
+++ b/services/frontend/src/pages/products/page.module.scss
@@ -1,14 +1,11 @@
 .container {
   @include flex(space-between, flex-start);
   gap: 2rem;
-}
 
-.left {
-  width: 560px;
-}
-
-.right {
-  flex: 1;
-  @include flex(space-between, center, column);
-  gap: 10px;
+  ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem 1rem;
+    padding-bottom: 2rem;
+  }
 }
