--- a/services/frontend/src/components/unit/layout/layout.module.scss
+++ b/services/frontend/src/components/unit/layout/layout.module.scss
@@ -9,7 +9,7 @@ $breakpoint-pc-max: 1440px;
 }
 
 @mixin pc {
-  @media (min-width: #{$breakpoint-pc-min}) and (max-width: #{$breakpoint-pc-max}) {
+  @media (min-width: #{$breakpoint-pc-min}) {
     @content;
   }
 }
@@ -25,6 +25,7 @@ html {
 }
 
 .layout {
+  height: 100%;
   margin: 0 auto;
 
   @include mobile {
@@ -33,5 +34,16 @@ html {
 
   @include pc {
     width: 1000px;
+  }
+
+  @include flex(start, start, column);
+
+  header {
+    width: 100%;
+  }
+
+  main {
+    flex: 1;
+    width: 100%;
   }
 }
