--- a/services/frontend/src/shared/styles/reset.scss
+++ b/services/frontend/src/shared/styles/reset.scss
@@ -71,7 +71,7 @@ input:-webkit-autofill:active {
   -webkit-text-fill-color: #000000;
 }
 
-html {
+html, body, #body {
   width: 100%;
   height: 100%;
 }
