--- a/services/frontend/src/pages/@/orders/page.module.scss
+++ b/services/frontend/src/pages/@/orders/page.module.scss
@@ -1,3 +1,8 @@
+.page {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   @include flex(space-between, flex-start, column);
   gap: 2rem;
@@ -9,6 +14,20 @@
     border-radius: ptr(5);
     @include flex(start, center);
     gap: 1rem;
+
+    h3 {
+      font-size: ptr(16);
+      font-weight: 700;
+      color: $gray_50;
+    }
+  }
+}
+
+.order_status_tab_disabled {
+  h3 {
+    color: $black !important;
+    text-decoration: underline;
+    text-underline-offset: ptr(5);
   }
 }
 
