--- a/services/frontend/src/pages/home/page.module.scss
+++ b/services/frontend/src/pages/home/page.module.scss
@@ -1,11 +1,9 @@
+.page {
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   @include flex(space-between, flex-start);
   gap: 2rem;
-
-  ul {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 2rem 1rem;
-    padding-bottom: 2rem;
-  }
 }
