--- a/services/frontend/src/pages/products/detail/page.module.scss
+++ b/services/frontend/src/pages/products/detail/page.module.scss
@@ -21,3 +21,9 @@
   width: 100%;
   @include flex(space-between, center);
 }
+
+.sold_out {
+  width: 100%;
+  @include flex(end, center);
+  gap: ptr(5);
+}
